# Saarthi-AI

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  Dockerfile  LICENSE  NOTICE  README.md  WINNING_DEMO_SCRIPT.md  check_chatbot_mcp.py  check_gemini_api.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  cache.py  config.py  db.py  history.py  lucknow_events.py  netutil.py  risk.py
app/agents/: adk_agent.py  orchestrator.py  prompts.py  synthesizer.py
app/providers/: gemini.py  groq.py  llm.py
app/tools/: __init__.py  advisories.py  events.py  festivals.py  geocode.py  traffic.py  weather.py
images/: architecture.html
static/css/: splash.css  style.css
static/js/: app.js  map.js  splash.js
templates/: base.html  index.html
